--- a/Views/Manage/AddGenre.cshtml
+++ b/Views/Manage/AddGenre.cshtml
@@ -9,6 +9,7 @@
 
             <form asp-action="AddGenre" asp-controller="Manage" method="POST">
 
+                <span class="mr-5 font-weight-light text-danger" asp-validation-for="Name"></span>
                 <div class="form-group row d-flex">
                     <p class="label col-md-4 pt-2">Genre Name</p>
                     <div class="col-md-8">
