--- a/Views/Manage/ChangePassword.cshtml
+++ b/Views/Manage/ChangePassword.cshtml
@@ -6,31 +6,31 @@
       </div>
       <div class="card-body ">
         
-        <form class="mt-5 pt-5">
+        <form id="changePassWordForm" class="mt-5 pt-5">
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2 form-control-lg">Current password</p>
                 <div class="col-md-8">
-                    <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text">
+                    <input class="form-control pt-0 form-lg form-control-lg" name="currentPassword" type="text">
                 </div>
             </div>
 
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2 form-control-lg">New password</p>
                 <div class="col-md-8">
-                    <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text">
+                    <input class="form-control pt-0 form-lg form-control-lg" name="newPassword" type="text">
                 </div>
             </div>
 
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2 form-control-lg">Confirm new password</p>
                 <div class="col-md-8">
-                    <input class="form-control pt-0 form-control-lg" id="Title" type="text">
+                    <input class="form-control pt-0 form-control-lg" name="confirmPassword" type="text">
                 </div>
             </div>        
 
           <div class="text-right mb-5 pb-5">
-            <button class="btn btn-danger waves-light">Cancel</button>
-            <button class="btn success-color-dark waves-light">Create employee</button>
+            <button type="button" class="btn btn-danger waves-light">Cancel</button>
+            <button id="submitEmployeeChangePassword" type="button" class="btn success-color-dark waves-light">Create employee</button>
           </div>
           
         </form>
@@ -38,3 +38,111 @@
       </div>
     </div>
   </div>
+
+
+
+
+
+
+
+
+
+  
+<!-- Modal while waiting for confirmation -->
+<div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-info" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead text-center">Waiting for response...</p>
+            </div>
+
+            <div class="text-center m-5 p-5">
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- End of waiting modal -->
+
+
+<!-- Success delete modal -->
+<div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-success" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead">Modal Success</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+                <div class="text-center">
+                    <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+                    <p>Book has been successfully deleted!</p>
+                </div>
+            </div>
+
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary">Close!</a>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+
+
+<!-- Failed to delete modal -->
+<div class="modal fade left" id="errorModalChangePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-warning" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Error!</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="text-center">
+                        <p><strong>Something went wrong!</strong></p>
+                        <p>There was an error in the server when attempting to delete this book</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary waves-effect" data-dismiss="modal">Dismiss</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
