--- a/Views/Manage/Shared/_header.cshtml
+++ b/Views/Manage/Shared/_header.cshtml
@@ -1,3 +1,14 @@
+@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+@using BookCave.Models
+
+@inject SignInManager<ApplicationUser> SignInManager
+
+@{
+    var nameClaim = ((ClaimsIdentity) User.Identity).Claims.FirstOrDefault(c => c.Type == "Name")?.Value;
+    var userClaim = ((ClaimsIdentity) User.Identity).Claims.FirstOrDefault(c => c.Type == "User")?.Value;
+}
+ 
  <!-- SideNav slide-out button -->
   <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse mb-0 animated fadeInLeft">
       <i class="fa fa-bars"></i>
@@ -6,9 +17,16 @@
 
   <!-- Sidebar navigation -->
   <div id="slide-out" class="side-nav fixed sn-bg-2 animated fadeInLeft">
-      <ul class="custom-scrollbar list-unstyled">
+      <ul class="custom-scrollbar list-unstyled">              
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <p class="pl-3 pt-3">Logged in as: @nameClaim </p>
+            }
+            else
+            {
+                <p class="pl-3 pt-3">You are not logged in!</p>
+            }
           
-          <p class="pl-3 pt-3">Logged in as:</p>
           <li class="text-center mt-4 mb-5 p-5" ><a asp-action="index" class="pl-0" ><img class="img-fluid" src="~/images/logo.png" alt="book cave logo"></a></li>
           
           <li class="mt-5">
@@ -37,6 +55,8 @@
                 <li><a asp-controller="manage" asp-action="orders" class="collapsible-header waves-effect @ViewBag.Active"><i class="fa fa-bar-chart"></i>Orders</a></li>
                 <li><a asp-controller="manage" asp-action="stock" class="collapsible-header waves-effect @ViewBag.Active"><i class="fa fa-stack-overflow"></i> Stock</a></li>
                 
+                @if (this.User.IsInRole("Admin"))
+                {
                 <li><a class="collapsible-header waves-effect arrow-r"><i class="fa fa-user-secret"></i> Employees<i class="fa fa-angle-down rotate-icon"></i></a>
                     <div class="collapsible-body">
                         <ul>
@@ -49,6 +69,7 @@
                         </ul>
                     </div>
                 </li>
+                }
 
             </ul>
         </li>
@@ -56,7 +77,7 @@
         <li class="fixed-bottom">
             <ul class="collapsible collapsible-accordion">
                 <li><a asp-controller="manage" asp-action="changepassword" class="collapsible-header waves-effect"><i class="fa fa-magic"></i> Change password</a></li>
-                <li><a class="collapsible-header waves-effect red darken-4" href="#"><i class="fa fa-sign-out"></i> Sign out</a></li>
+                <li><a class="collapsible-header waves-effect red darken-4" asp-controller="User" asp-action="LogOut"><i class="fa fa-sign-out"></i> Sign out</a></li>
             </ul>
         </li>
         
