--- a/Views/Manage/AddAuthor.cshtml
+++ b/Views/Manage/AddAuthor.cshtml
@@ -8,6 +8,7 @@
         <div class="card-body ">
             <form asp-action="AddAuthor" asp-controller="Manage" method="POST" class="my-5">
 
+                <span class="mr-5 font-weight-light text-danger" asp-validation-for="Name"></span>
                 <div class="form-group row d-flex">
                     <p class="label col-md-4 pt-2 form-control-lg">Author's Name</p>
                     <div class="col-md-8">
