--- a/Views/Manage/AddEmployee.cshtml
+++ b/Views/Manage/AddEmployee.cshtml
@@ -3,66 +3,68 @@
 
 <div class="col-lg-7 col-md-12 offset-lg-2 animated fadeInDown mb-5 mt-5">
     <div class="card card-cascade wider">
-      <div class="view gradient-card-header blue-gradient p-3">
-        <h4 class="h2 mb-0">Add Employee</h4>
-      </div>
-      <div class="card-body ">
-        
-        <form class="mt-5 pt-5" asp-action="AddEmployee" asp-controller="Manage" method="POST">
-            <div class="form-group row d-flex">
-                <p class="label col-md-2 pt-2 form-control-lg">Email</p>
-                <div class="col-md-10">
-                    <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text" asp-for="Email">
-                </div>
-            </div>
+        <div class="view gradient-card-header blue-gradient p-3">
+            <h4 class="h2 mb-0">Add Employee</h4>
+        </div>
+        <div class="card-body ">
 
-            <div class="form-group row d-flex">
-                <p class="label col-md-2 pt-2 form-control-lg">First Name</p>
-                <div class="col-md-10">
-                    <input class="form-control pt-0 form-lg form-control-lg" id="FirstName" type="text" asp-for="FirstName">
-                </div>
-            </div>
-
-            <div class="form-group row d-flex">
-                <p class="label col-md-2 pt-2 form-control-lg">Last Name</p>
-                <div class="col-md-10">
-                    <input class="form-control pt-0 form-lg form-control-lg" id="LastName" type="text" asp-for="LastName">
-                </div>
-            </div>
-
-            <div class="form-group row d-flex">
-                <p class="label col-md-2 pt-2 form-control-lg">Password</p>
-                <div class="col-md-10">
-                    <input class="form-control pt-0 form-control-lg" id="Title" type="password" asp-for="Password">
-                </div>
-            </div>
-
-            <div class="form-group row d-flex">
-                <p class="label col-md-2 pt-2 form-control-lg">Confirm Password</p>
-                <div class="col-md-10">
-                    <input class="form-control pt-0 form-control-lg" id="ConfirmTitle" type="password" asp-for="ConfirmPassword">
-                </div>
-            </div>     
-
-            <div class="form-inline mt-2 mb-4 row" id="typeSelector">
-                <div class="form-check col">
-                    <input class="form-check-input" asp-for="UserType" type="radio" id="typeEmployee" checked="checked" value="Employee">
-                    <label class="form-check-label" for="typeEmployee">Employee</label>
+            <form class="mt-5 pt-5" asp-action="AddEmployee" asp-controller="Manage" method="POST">
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2 form-control-lg">Email</p>
+                    <div class="col-md-8">
+                        <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text" asp-for="Email">
+                    </div>
                 </div>
 
-                <div class="form-check col">
-                    <input class="form-check-input" asp-for="UserType" type="radio" id="typeAdmin" value="Admin">
-                    <label class="form-check-label" for="typeAdmin">Admin</label>
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2 form-control-lg">First Name</p>
+                    <div class="col-md-8">
+                        <input class="form-control pt-0 form-lg form-control-lg" id="FirstName" type="text" asp-for="FirstName">
+                    </div>
                 </div>
-            </div>                
 
-          <div class="text-right mb-5 pb-5">
-            <button class="btn btn-danger waves-light">Cancel</button>
-            <button class="btn success-color-dark waves-light" type="submit">Create employee</button>
-          </div>
-          
-        </form>
-        
-      </div>
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2 form-control-lg">Last Name</p>
+                    <div class="col-md-8">
+                        <input class="form-control pt-0 form-lg form-control-lg" id="LastName" type="text" asp-for="LastName">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2 form-control-lg">Password</p>
+                    <div class="col-md-8">
+                        <input class="form-control pt-0 form-control-lg" id="Title" type="password" asp-for="Password">
+                    </div>
+                </div>
+
+                <div class="form-group row d-flex">
+                    <p class="label col-md-4 pt-2 form-control-lg">Confirm Password</p>
+                    <div class="col-md-8">
+                        <input class="form-control pt-0 form-control-lg" id="ConfirmTitle" type="password" asp-for="ConfirmPassword">
+                    </div>
+                </div>
+
+                <div class="form-inline mb-5 row justify-content-end" id="typeSelector">
+                    <div class="col-md-6 row">
+                        <div class="form-check col">
+                            <input class="form-check-input" asp-for="UserType" type="radio" id="typeEmployee" checked="checked" value="Employee">
+                            <label class="form-check-label" for="typeEmployee">Employee</label>
+                        </div>
+
+                        <div class="form-check col">
+                            <input class="form-check-input" asp-for="UserType" type="radio" id="typeAdmin" value="Admin">
+                            <label class="form-check-label" for="typeAdmin">Admin</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-right mb-5 pb-5">
+                    <button class="btn btn-danger waves-light">Cancel</button>
+                    <button class="btn success-color-dark waves-light" type="submit">Create employee</button>
+                </div>
+
+            </form>
+
+        </div>
     </div>
-  </div>
+</div>
