--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -183,8 +183,7 @@ header,
     max-width: 200px;
 }
 
-.elflow {
-    position: relative;
-    text-overflow: hidden !important;
-    white-space: nowrap !important; 
+.align-div-right {
+    margin-left: auto; 
+    margin-right:0;
 }
