fixed some stylings

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
   <!--Carousel Wrapper-->
-    <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="carousel-example-1z" class="carousel slide carousel-fade animated fadeIn" data-ride="carousel">
 
       <!--Indicators-->
       <ol class="carousel-indicators">
@@ -114,35 +114,29 @@
         <span class="sr-only">Next</span>
       </a>
       <!--/.Controls-->
-
     </div>
     <!--/.Carousel Wrapper-->
 
   <!--Main layout-->
-  <main>
+  <main class="pt-0">
     <div class="container">
 
       <!--Section: banner-->
-      <section class="mt-5 button-container wow fadeIn">
-
+      <section class="button-container wow fadeIn">
         <!--Grid row-->
-        <div class="row">
-
+        <div class="row wow fadeIn">
           <!--Grid column-->
           <div class="banner text-center">
             <p><strong>Some commercial <small class="text-muted">from an awesome publisher</small></strong></p>
           </div>
-          
           <!--Grid column-->
-
         </div>
         <!--Grid row-->
-
       </section>
       <!--Section: Buttons-->
 
         
-      <div class="row">
+      <div class="row wow fadeIn">
         <!-- Card -->
         <div class="col">
           <div class="card">
