--- a/Views/Shared/_footer.cshtml
+++ b/Views/Shared/_footer.cshtml
@@ -1,96 +1,91 @@
 <!--Footer-->
-  <footer class="page-footer font-small unique-color-dark lighten-3 pt-4 mt-4 wow fadeIn">
+<footer class="page-footer font-small unique-color-dark lighten-3 pt-4 mt-4 wow fadeIn">
 
-      <!--Footer Links-->
-      <div class="container text-center text-md-left">
-          <div class="row my-4">
+    <!--Footer Links-->
+    <div class="container">
+        <div class="row my-4">
 
-              <!--First column-->
-              <div class="col-md-3 col-lg-3 ml-auto">
-                  <h5 class="text-uppercase mb-4 font-weight-bold">company</h5>
-                  <ul class="list-unstyled">
-                      <p>
-                          <a href="#!">Contact us</a>
-                      </p>
-                      <p>
-                          <a href="#!">About us</a>
-                      </p>
-                      <p>
-                          <a href="#!">Site map</a>
-                      </p>
-                  </ul>
-              </div>
-              <!--/.First column-->
+            <!--First column-->
+            <div class="col">
+                <h5 class="text-uppercase mb-4 font-weight-bold">company</h5>
+                <ul class="list-unstyled">
+                    <p>
+                        <a href="#!">Contact us</a>
+                    </p>
+                    <p>
+                        <a href="#!">About us</a>
+                    </p>
+                    <p>
+                        <a href="#!">Site map</a>
+                    </p>
+                </ul>
+            </div>
+            <!--/.First column-->
 
-              <hr class="clearfix w-100 d-md-none">
 
-              <!--Second column-->
-              <div class="col-md-3 col-lg-3 ml-auto">
-                  <h5 class="text-uppercase mb-4 font-weight-bold">About</h5>
-                  <ul class="list-unstyled">
-                      <p>
-                          <a href="#!">PROJECTS</a>
-                      </p>
-                      <p>
-                          <a href="#!">Terms & Agreements</a>
-                      </p>
-                      <p>
-                          <a href="#!">Help</a>
-                      </p>
-                      <p>
-                          <a href="#!">F.A.Q.</a>
-                      </p>
-                  </ul>
-              </div>
-              <!--/.Second column-->
+            <!--Second column-->
+            <div class="col">
+                <h5 class="text-uppercase mb-4 font-weight-bold">About</h5>
+                <ul class="list-unstyled">
+                    <p>
+                        <a href="#!">PROJECTS</a>
+                    </p>
+                    <p>
+                        <a href="#!">Terms & Agreements</a>
+                    </p>
+                    <p>
+                        <a href="#!">Help</a>
+                    </p>
+                    <p>
+                        <a href="#!">F.A.Q.</a>
+                    </p>
+                </ul>
+            </div>
+            <!--/.Second column-->
 
-              <hr class="clearfix w-100 d-md-none">
+<hr class="clearfix w-100 d-md-none">
 
-              <!--Third column-->
-              <div class="col-md-3 col-lg-3">
-                  <h5 class="text-uppercase mb-4 font-weight-bold">Payment Information</h5>
-                  <!--Info-->
-                  <img class="payment-img" src="~/images/payments.jpg" alt="accepted payments are: Paypal and all assosiated cards, like American Express, Visa. Master Card and Discover Network">
-              </div>
-              <!--/.Third column-->
+            <!--Third column-->
+            <div class="col">
+                <h5 class="text-uppercase mb-0 font-weight-bold">We accept:</h5>
+                <!--Info-->
+                <img class="payment-img" src="~/images/payments.png" alt="accepted payments are: Paypal and all assosiated cards, like American Express, Visa. Master Card and Discover Network">
+            </div>
+            <!--/.Third column-->
 
-              <hr class="clearfix w-100 d-md-none">
+<hr class="clearfix w-100 d-md-none">
 
-              <!--Fourth column-->
-              <div class="col-md-3 col-lg-3 text-center">
-                  <h5 class="text-uppercase mb-4 font-weight-bold">Follow Us</h5>
-                  <!--Social buttons-->
-                  <div class="mt-2">
-                      <!--Facebook-->
-                      <a type="button" class="btn-floating btn-small btn-fb">
+            <!--Fourth column-->
+            <div class="col text-center">
+                <h5 class="text-uppercase mb-4 font-weight-bold">Follow Us</h5>
+                <!--Social buttons-->
+                <div class="mt-2">
+                    <!--Facebook-->
+                    <a type="button" class="btn-floating btn-small btn-fb">
                           <i class="fa fa-facebook"></i>
                       </a>
-                      <!--Twitter-->
-                      <a type="button" class="btn-floating btn-small btn-tw">
+                    <!--Twitter-->
+                    <a type="button" class="btn-floating btn-small btn-tw">
                           <i class="fa fa-twitter"></i>
                       </a>
-                      <!--Google +-->
-                      <a type="button" class="btn-floating btn-small btn-gplus">
+                    <!--Google +-->
+                    <a type="button" class="btn-floating btn-small btn-gplus">
                           <i class="fa fa-google-plus"></i>
                       </a>
-                      <!--Dribbble-->
-                      <a type="button" class="btn-floating btn-small btn-dribbble">
-                          <i class="fa fa-dribbble"></i>
-                      </a>
-                  </div>
-              </div>
-              <!--/.Fourth column-->
+                </div>
+            </div>
+            <!--/.Fourth column-->
 
-          </div>
-      </div>
-      <!--/.Footer Links-->
+        </div>
+    </div>
+    <!--/.Footer Links-->
 
-      <!--Copyright-->
-      <div class="footer-copyright py-3 text-center">
-          © 2018 Copyright
-          <a asp-controller="Home" asp-action="Index"> Book Cave </a>
-      </div>
-      <!--/.Copyright-->
+    <!--Copyright-->
+    <div class="footer-copyright py-3 text-center">
+        © 2018 Copyright
+        <a asp-controller="Home" asp-action="Index"> Book Cave </a>
+    </div>
+    <!--/.Copyright-->
 
-  </footer>
+</footer>
 <!--/.Footer-->
